--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -1,111 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
-    tools:context=".Register2">
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:text="@string/personalise_your_profile"
-        android:textSize="30sp" />
-
+    android:layout_height="match_parent">
     <LinearLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        tools:context=".Register2">
 
         <TextView
-            android:id="@+id/textView5"
-            android:layout_width="0dp"
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_weight="1"
-            android:text="@string/profile_picture"
-            android:textSize="20sp" />
+            android:layout_marginTop="100dp"
+            android:text="@string/personalise_your_profile"
+            android:textSize="30sp" />
 
-        <ImageButton
-            android:id="@+id/Camera_Register2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="30dp"
-            android:contentDescription="@string/take_photo"
-            android:foregroundGravity="left"
-            app:srcCompat="@android:drawable/ic_menu_camera" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/Gallery_select_Register2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="30dp"
-            android:background="#00FFFFFF"
-            android:contentDescription="@string/image_gallery"
-            android:foregroundGravity="left"
-            android:src="@android:drawable/ic_menu_gallery" />
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_weight="1"
+                android:text="@string/profile_picture"
+                android:textSize="20sp" />
+
+            <ImageButton
+                android:id="@+id/Camera_Register2"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="30dp"
+                android:contentDescription="@string/take_photo"
+                android:foregroundGravity="left"
+                app:srcCompat="@android:drawable/ic_menu_camera" />
+
+            <ImageButton
+                android:id="@+id/Gallery_select_Register2"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="30dp"
+                android:background="#00FFFFFF"
+                android:contentDescription="@string/image_gallery"
+                android:foregroundGravity="left"
+                android:src="@android:drawable/ic_menu_gallery" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/text7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:labelFor="@id/Nickname_register2"
+            android:text="@string/nickname" />
+
+        <EditText
+            android:id="@+id/Nickname_register2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:autofillHints=""
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/text9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:labelFor="@id/Interest_register2"
+            android:text="@string/interest" />
+
+        <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
+            android:id="@+id/Interest_register2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:id="@+id/text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="10dp"
+            android:labelFor="@id/Shortdesc_register2"
+            android:text="@string/short_description" />
+
+        <EditText
+            android:id="@+id/Shortdesc_register2"
+            android:layout_width="match_parent"
+            android:layout_height="126dp"
+            android:layout_marginTop="10dp"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:maxLength="300" />
+
+        <Button
+            android:id="@+id/Register_register2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/register" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/text7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:labelFor="@id/Nickname_register2"
-        android:text="@string/nickname" />
-
-    <EditText
-        android:id="@+id/Nickname_register2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:id="@+id/text9"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:labelFor="@id/Interest_register2"
-        android:text="@string/interest" />
-
-    <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
-        android:id="@+id/Interest_register2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" />
-
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="10dp"
-        android:labelFor="@id/Shortdesc_register2"
-        android:text="@string/short_description" />
-
-    <EditText
-        android:id="@+id/Shortdesc_register2"
-        android:layout_width="match_parent"
-        android:layout_height="126dp"
-        android:layout_marginTop="10dp"
-        android:importantForAutofill="no"
-        android:inputType="textPersonName"
-        android:maxLength="300" />
-
-    <Button
-        android:id="@+id/Register_register2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/register" />
-
-</LinearLayout>
+</ScrollView>
