--- a/app/src/main/res/layout/fragment_home_addfriend.xml
+++ b/app/src/main/res/layout/fragment_home_addfriend.xml
@@ -23,6 +23,8 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:background="#00FFFFFF"
                 app:civ_border_color="#00FFFFFF"
@@ -36,8 +38,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="44dp"
+                android:fontFamily="sans-serif-black"
                 android:includeFontPadding="false"
                 android:textAlignment="viewEnd"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.485"
@@ -46,11 +50,24 @@
                 tools:text="Name" />
 
             <TextView
+                android:id="@+id/addfriend_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="@+id/addfriend_name"
+                app:layout_constraintStart_toStartOf="@+id/addfriend_name"
+                app:layout_constraintTop_toBottomOf="@+id/addfriend_name" />
+
+            <TextView
                 android:id="@+id/addfriend_friendcount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
+                android:fontFamily="sans-serif-light"
                 android:text="TextView"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/addfriend_profilepic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/addfriend_profilepic"
@@ -60,29 +77,24 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
+                android:fontFamily="sans-serif-smallcaps"
                 android:text="Short Description"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/addfriend_dob"
-                app:layout_constraintTop_toBottomOf="@+id/addfriend_dob" />
-
-            <TextView
-                android:id="@+id/addfriend_dob"
-                android:layout_width="108dp"
-                android:layout_height="17dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
-                android:text="TextView"
+                app:layout_constraintBottom_toTopOf="@+id/addfriend_shortdesc"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/addfriend_profilepic"
-                app:layout_constraintVertical_chainStyle="spread" />
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
                 android:id="@+id/addfriend_shortdesc"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="57dp"
                 android:layout_marginTop="16dp"
                 android:text="TextView"
+                app:layout_constraintBottom_toTopOf="@+id/textView7"
                 app:layout_constraintStart_toStartOf="@+id/textView8"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -91,7 +103,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:fontFamily="sans-serif-smallcaps"
                 android:text="Interests"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/addfriend_shortdesc"
                 app:layout_constraintTop_toBottomOf="@+id/addfriend_shortdesc" />
@@ -100,6 +114,7 @@
                 android:id="@+id/addfriend_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:clickable="true"
                 app:backgroundTint="#E6E8E3"
                 app:layout_constraintBottom_toTopOf="@+id/textView9"
@@ -107,26 +122,30 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="spread"
                 app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@android:drawable/ic_delete" />
+                app:srcCompat="@drawable/crossmark" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/addfriend_yes"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:clickable="true"
-                app:backgroundTint="#72D676"
+                app:backgroundTint="#E6E8E3"
                 app:layout_constraintBottom_toTopOf="@+id/textView10"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/addfriend_no"
                 app:rippleColor="#C6F1A4"
-                app:srcCompat="?android:attr/textCheckMark" />
+                app:srcCompat="@drawable/checkmark" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="@font/amaranth"
                 android:text="Maybe Next Time..."
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/addfriend_no"
                 app:layout_constraintHorizontal_bias="0.492"
@@ -136,7 +155,10 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="@font/amaranth"
                 android:text="Let's Be Friends!"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/addfriend_yes"
                 app:layout_constraintHorizontal_bias="0.63"
