--- a/app/src/main/res/layout/activity_display_selected.xml
+++ b/app/src/main/res/layout/activity_display_selected.xml
@@ -43,7 +43,7 @@
 
                     <TextView
                         android:id="@+id/selected_Name_register"
-                        android:layout_width="152dp"
+                        android:layout_width="match_parent"
                         android:layout_height="54dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="20dp"
