--- a/app/src/main/res/layout/activityitem.xml
+++ b/app/src/main/res/layout/activityitem.xml
@@ -49,7 +49,7 @@
                 <TextView
                     android:id="@+id/act_location"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="22dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="7dp"
                     android:gravity="center"
