--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,10 +11,11 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="match_parent"
+        android:layout_width="322dp"
         android:layout_height="250dp"
-        android:layout_marginTop="100dp"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/welcome"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="240dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -44,7 +45,9 @@
         android:id="@+id/Login_Start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:text="Login"
+        tools:layout_editor_absoluteX="24dp"
+        tools:layout_editor_absoluteY="512dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -52,4 +55,4 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="Forgot your password?" />
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
