--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#222222</color>
+    <color name="colorPrimaryDark">#F2F2F2</color>
+    <color name="colorAccent">#F2A03D</color>
 
     <color name="right">#21d1de</color>
     <color name="left">#75e916</color>
